# Completed-Projects

./: .gitignore  GreyScaleImageProcessing.py
BinarySearchTree/src/: BSTTestGiven.cpp  BSTTestGrader.cpp  BSTTestOwn.cpp
C And C++/BinarySearchTree/src/: BST.hpp  CMakeLists.txt
C And C++/DoublyLinkedList/Source/: DoublyLinkedList.hpp  DoublyLinkedListTestOwn.cpp
C And C++/PiggyBank/: PiggyBank.cpp
C And C++/Sorting/src/: BubbleSort.hpp  CMakeLists.txt  MergeSort.hpp
C And C++/Sudoku/src/: CMakeLists.txt  SudokuTestGiven.cpp  SudokuTestGrader.cpp  SudokuTestOwn.cpp
DoublyLinkedList/Source/: CMakeLists.txt  DoublyLinkedListTestGiven.cpp  DoublyLinkedListTestGrader.cpp
Microcontrollers/STM32 Microcontroller Pixel Dash Game/: main.c
Microcontrollers/STM32 Microcontroller Timer/: Timer.c  Timer.h  main.c
PiggyBank/: PiggyBank.hpp  main.cpp
Reconfigurable Computing/ADC/: ADC.cdf  ADC.done  ADC.htm  ADC.jditmp  ADC.pin  ADC.qpf  ADC.qsf  ADC.sld  ADC.vhd  ADC_PLL.cmp  ADC_PLL.ppf  ADC_PLL.qip  ADC_PLL.vhd  ADC_TOP.vhd  my_ADC.qsys  my_ADC.sopcinfo
Reconfigurable Computing/Accumulator/: Accumulator.done  Accumulator.jdi  Accumulator.pin  Accumulator.qpf  Accumulator.qsf  Accumulator.vhd  Accumulator_TB.vhd  Accumulator_Top.vhd
Reconfigurable Computing/Counter/: TenBitCounter.cdf  TenBitCounter.done  TenBitCounter.jditmp  TenBitCounter.pin  TenBitCounter.qpf  TenBitCounter.qsf  TenBitCounter.vhd  TenBitCounter_TB.vhd
Reconfigurable Computing/FIFO/: ACCUMULATOR.vhd  ALT_CLKS.cmp  ALT_CLKS.ppf  ALT_CLKS.qip  ALT_CLKS.vhd  FIFO.cdf  FIFO.done  FIFO.jditmp  FIFO.pin  FIFO.qpf  FIFO.qsf  FIFO_TB.vhd  FIFO_TOP.vhd  my_FIFO.cmp  my_FIFO.qip  my_FIFO.vhd  stp1.stp
Reconfigurable Computing/RNG/: RNG.vhd  RNG.vhd.bak  RNG_TB.vhd  RNG_TB.vhd.bak  RNG_Top.done  RNG_Top.htm  RNG_Top.jditmp  RNG_Top.pin  RNG_Top.qpf  RNG_Top.qsf  RNG_Top.vhd  rng_top.vhd.bak
Reconfigurable Computing/Simulated_Annealing/: Aneal.c  Place.c  Place.cpp  ReadMe.txt  Temperature_Adjustments.xlsx  Test.txt  input.txt  input2.txt  input3.txt  input4.txt  output2.txt  output3.txt  output4.txt  tsp.c
Reconfigurable Computing/Stopwatch/: Stopwatch.cdf  Stopwatch.done  Stopwatch.htm  Stopwatch.jditmp  Stopwatch.pin  Stopwatch.qpf  Stopwatch.qsf  Stopwatch.vhd  Stopwatch_TB.vhd  Stopwatch_TOP.vhd
Reconfigurable Computing/Tetris/: Accelerometer.vhd  Accelerometer_Test.vhd  RNG_Color.vhd  ScoreToDigits.vhd  Speaker.vhd  TETRIS.cdf  TETRIS.done  TETRIS.htm  TETRIS.jditmp  TETRIS.pin  TETRIS.qpf  TETRIS.qsf  Tetris_Logic.vhd  Tetris_Top.vhd  VGA.vhd  VGA_PLL.vhd  reset_delay.vhd  spi_controller.vhd  spi_ee_config.vhd  spi_param.vhd  spi_pll.cmp  spi_pll.qip  spi_pll.vhd
Reconfigurable Computing/VGA/: Debounce.vhd  Debounce_TB.vhd  FLag_Color_Values.xlsx  VGA.cdf  VGA.done  VGA.htm  VGA.jdi  VGA.pin  VGA.qpf  VGA.qsf  VGA.vhd  VGA_PLL.cmp  VGA_PLL.ppf  VGA_PLL.qip  VGA_PLL.vhd  VGA_TB.vhd  VGA_TOP.vhd  ~$FLag_Color_Values.xlsx
STM32 Microcontroller Pixel Dash Game/: FinalProject.h  LCD.c
Sorting/src/: BigVector.hpp  BubbleSort.cpp  MergeSort.cpp  SelectionSort.cpp  SelectionSort.hpp  SortTestGiven.cpp  SortTestGrader.cpp  SortTestOwn.cpp
Sudoku/src/: Sudoku.cpp  Sudoku.hpp
(+25 files in other folders)
